feat: added auth middleware, email provider, create user

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=1ahmEpcUxMeICgB8nI78ViUfags6lBdc
 DB_CONNECTION=sqlite
+SES_ACCESS_KEY=<aws-access-key>
+SES_ACCESS_SECRET=<aws-secret>
+SES_REGION=us-east-1
+CACHE_VIEWS=false
+DEFAULT_EMAIL=xxxxxx@email.com
