--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@adonisjs/repl": "^3.1.5",
     "@adonisjs/view": "^6.0.8",
     "aws-sdk": "^2.968.0",
+    "date-fns": "^2.23.0",
     "luxon": "^2.0.2",
     "phc-argon2": "^1.1.2",
     "proxy-addr": "^2.0.7",
